--- a/Okaeri/src/index.html
+++ b/Okaeri/src/index.html
@@ -6,8 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/bootstrap-5.0.2-dist/css/bootstrap.css">
 </head>
 <body>
   <app-root></app-root>
+  <!-- <script src="../node_modules/jquery/dist/jquery.js"></script> -->
+  <script src="assets/bootstrap-5.0.2-dist/js/bootstrap.js"></script>
 </body>
 </html>
